WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46268
[GTK]
r68027
caused many crashes on the bots
https://bugs.webkit.org/show_bug.cgi?id=46268
Summary
[GTK] r68027 caused many crashes on the bots
Martin Robinson
Reported
2010-09-22 09:14:42 PDT
It looks like the problem in this case is a missing include, which has the OwnPtr specialization for cairo paths.
Attachments
Patch for this issue
(1.28 KB, patch)
2010-09-22 09:21 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2010-09-22 09:21:25 PDT
Created
attachment 68379
[details]
Patch for this issue
Xan Lopez
Comment 2
2010-09-22 09:22:51 PDT
Comment on
attachment 68379
[details]
Patch for this issue r=me
Martin Robinson
Comment 3
2010-09-22 09:25:43 PDT
Committed
r68050
: <
http://trac.webkit.org/changeset/68050
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug